force-app/main/default/objects/IVRCaseTypePrompt__mdt/IVRCaseTypePrompt__mdt.object-meta.xml
<CustomObject>
    <label>IVRCaseTypePrompt</label>
    <pluralLabel>IVRCaseTypePrompts</pluralLabel>
</CustomObject>