force-app/main/default/objects/IVRCaseTypePrompt__mdt/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>