force-app/main/default/objects/IVRCaseTypePrompt__mdt/fields/Case_Type_IVR_Key__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_IVR_Key__c</fullName>
    <label>Case Type IVR Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>