force-app/main/default/objects/IVRCaseTypePrompt__mdt/fields/Read_In_IVR__c.field-meta.xml
<CustomField>
    <fullName>Read_In_IVR__c</fullName>
    <label>Read In IVR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>