force-app/main/default/objects/IVRCaseTypePrompt__mdt/fields/Service_Prompt_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Prompt_Id__c</fullName>
    <label>Service Prompt Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>